# myrepo

./: .aider.conf.yml  CONVENTIONS.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
issues/: 0001-network-download-url.md
myrepo/: network.py
tests/: test_network.py
