[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myrepo"
version = "0.1.0"
description = "Personal reusable Python utilities"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/avidclam/myrepo"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
